test/good/functions/lambda08.px

func f(Int n, Int->Int g) Int def
    return g(n)

print f(4, _).toString() * 2
