test/bad/functions/lambda12.px

func f(String->String g) def
    return

f(write(_))
